manifests/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minecraft-control-panel-frontend
  name: minecraft-control-panel-frontend
  namespace: mc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft-control-panel-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: minecraft-control-panel-frontend
    spec:
      imagePullSecrets:
      - name: ecr-registry-secret
      containers:
      - image: 043039367084.dkr.ecr.us-east-1.amazonaws.com/minecraft-control-panel-frontend:latest
        imagePullPolicy: Always
        name: minecraft-control-panel-frontend
        resources:
          requests:
            cpu: 20m
            memory: 256Mi
          limits:
            cpu: 150m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
