manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minecraft-control-panel-frontend
  name: minecraft-control-panel-frontend
  namespace: mc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: minecraft-control-panel-frontend
  sessionAffinity: None
  type: ClusterIP
